# site

./: .env.example  .eslintrc.cjs  .gitignore  .rumdl.toml  CHANGELOG.md  CLAUDE.md  Procfile.dev  README.md  eslint.config.js  mvp.tsx  package-lock.json  package.json  pyproject.toml  tailwind.config.cjs  tailwind.config.ts  usercustomize.py
.agents/skills/jx/: SKILL.md
.claude/skills/: SKILL.md  design-system.md  fastapi-security.md  fastapi.md  jx-alpine.md  jx-components.md  jx-htmx.md  jx-init-project.md  jx-sse.md  jx.md
.claude/skills/design-system/: SKILL.md  animations.md  ui-components.md
.claude/skills/fastapi/: SKILL.md  faststream.md  pydantic.md  rate-limiting.md  security.md  sqlmodel.md
.claude/skills/httpx/: SKILL.md
.claude/skills/jx/: SKILL.md  alpine.md  bff.md  components.md  formidable.md  htmx.md  pydantic-forms.md  sse.md
.claude/skills/pytest/: SKILL.md
.claude/skills/typer/: SKILL.md
.github/: copilot-instructions.md
.github/prompts/: fase1-docker-setup.prompt.md  fase2-page-restructuring.prompt.md  fase3-home-page.prompt.md  fase4-projects-page.prompt.md  fase5-blog-system.prompt.md  fase6-comments-auth.prompt.md  fase7-security-performance.prompt.md  fase8-deploy-cicd.prompt.md  fase9-polish-extras.prompt.md  plan-portfolioRefactor.prompt.md
.github/workflows/: ci.yml
app/: db.py  main.py  views.py
app/api/: __init__.py  about.py  auth.py  blog.py  comments.py  contact.py  projects.py  router.py  telemetry.py
app/api/v1/: __init__.py
app/components/layouts/: base.jinja  public.jinja
app/components/pages/: contact.jinja  home.jinja  maintenance.jinja  not-found.jinja
app/components/ui/: alert.jinja  breadcrumb.jinja  card.jinja  center.jinja  empty-state.jinja  footer.jinja  grid.jinja  input.jinja  meta-info.jinja  navbar.jinja  page-header.jinja  scroll-indicator.jinja  section-link.jinja  stack.jinja
app/core/: config.py  dependencies.py  deps.py  rendering.py  security.py  utils.py
app/domain/: schemas.py
app/middleware/: __init__.py  logging.py  security.py
app/models/: __init__.py  comment.py  profile.py  project.py  schemas.py  user.py
app/observability/: bootstrap.py  events.py  metrics.py  telemetry.py
app/services/: __init__.py  auth.py  blog.py  contact.py  github_blog.py  home.py  profile.py  project.py  projects.py  types.py
app/static/css/: motion.css  style.css  tailwind.css  tokens.css
app/static/js/: analytics.js  main.js  theme-bootstrap.js
app/templates/: base.html
app/templates.old/: base.html
app/templates.old/pages/: about.html  contact.html  home.html
app/templates.old/partials/: project_list.html
app/templates/blog/: detail.html  list.html
app/templates/layouts/: base.jinja  home.jinja  public.jinja
app/templates/pages/: about.html  about.jinja  contact.html  contact.jinja  home.html  home.jinja  maintenance.jinja  not-found.jinja  projects.html
app/templates/ui/: avatar.jinja  content-shell.jinja  icon.jinja  meta-info.jinja  pagination.jinja  seo.jinja  social-links.jinja
app/views/: __init__.py  admin.py  public.py
apps/admin/: README.md  app.py  pyproject.toml
apps/admin/api/: router.py
apps/admin/components/layouts/: admin.jinja
apps/admin/components/pages/: Login.jinja  coming-soon.jinja  home.jinja
apps/admin/components/ui/: Navbar.jinja  sidebar.jinja
apps/admin/static/: style.css
apps/admin/web/: router.py
apps/blog/: README.md  app.py  pyproject.toml
apps/blog/api/: router.py
apps/blog/components/blog/: Comments.jinja  PostCard.jinja  Reactions.jinja
apps/blog/components/pages/: BlogDetail.jinja  BlogHome.jinja  BlogList.jinja  home.jinja
apps/blog/components/ui/: Navbar.jinja
apps/blog/web/: router.py
apps/portfolio/: README.md  app.py  pyproject.toml
apps/portfolio/api/: router.py
apps/portfolio/web/: router.py
apps/ui/: catalog.py  coming_soon.py  not_found.py
apps/ui/api/: __init__.py  router.py
apps/ui/static/: ui.css
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py  main_old.py  views.py
backend/app/api/: auth.py  projects.py
backend/app/core/: deps.py
backend/app/models/: blog.py  comment.py  user.py
backend/app/templates/pages/: projects.html
backend/app/templates/pages/blog/: list.html
backend/app/templates/partials/: comments.html  post_list.html
backend/docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.prod.yml
backend/templates/blog/: list.html
backend/templates/pages/: home.html
content/blog/: clean-architecture-notes-from-real-projects.md  docker-compose-habits-for-production-like-dev.md  fastapi-observability-playbook.md  markdown-pipelines-that-age-well.md  rate-limits-that-match-real-traffic.md  security-controls-that-should-be-default.md  server-rendered-ux-with-lightweight-javascript.md
content/projects/: api-observability-hub.md  cli-tool-template.md  distributed-task-orchestrator.md  env-vault.md  event-sourcing-kit.md  fastapi-auth-boilerplate.md  http-mock-server.md  log-stream-viewer.md  markdown-knowledge-base.md  postgres-schema-diff.md  rate-limiter-middleware.md  secure-contact-pipeline.md
docker/: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
docker/traefik/dynamic/: routing.yml
docs/: PLAN.md  architecture.md  backend.md  design-system.md  figma-tokens.md  frontend.md  index.md  infrastructure.md  security.md
frontend/public/: health.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/components/: HealthModal.tsx  TestDialog.tsx  ThemeToggle.tsx
frontend/src/hooks/: useHealthMonitor.ts
infra/: README.md
infra/signoz/: README.md
scripts/: run_otel.py
src/: app.css  app.tsx
src/data/: mock-api.ts  ui-config.ts
src/routes/: [...404].tsx  about.tsx  contact.tsx  index.tsx
src/stores/: content.tsx  i18n.ts  theme.ts
src/types/: portfolio.ts
tests/: conftest.py  test_apps.py  test_page_rendering_snapshots.py  test_profile.py  test_routes_api_coverage.py  test_routes_integration.py  test_security_owasp.py  test_seo_service.py  test_telemetry.py
(+125 files in other folders)
