[project]
name = "portfolio"
version = "0.0.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "fastapi>=0.132.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jx>=0.8.0",
    "markdown>=3.9",
    "nh3>=0.2.14",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pygments>=2.19.2",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "rich>=14.3.3",
    "opentelemetry-distro>=0.60b1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "rumdl>=0.1.26",
    "taskipy>=1.14.1",
    "ty>=0.0.18",
]

[tool.fastapi]
entrypoint = "app.main:app"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.taskipy.tasks]
# --- assets: compile JS and CSS ---
build_js  = "npm run build:js"
build_css = "npx tailwindcss -c tailwind.config.cjs -i app/static/css/tailwind.input.css -o app/static/css/tailwind.css --minify"
build     = "task build_js && task build_css"
watch_js  = "npm run watch:js"

# --- dev server ---
run      = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
run_prod = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
run_otel = "python scripts/run_otel.py --host 0.0.0.0 --port 8000"

# --- formatting ---
md_fmt = "rumdl fmt ."
fmt = "ruff format . && task md_fmt"

# --- checks (lint / types / tests / templates / docs) ---
lint      = "ruff check app tests app/static/js"
typecheck = "ty check app"
test      = "pytest -q"
test_routes   = "pytest --cov=app/api --cov-report=term-missing --cov-fail-under=100 -q"
test_security = "pytest tests/test_security_csrf.py tests/test_markdown_sanitization.py tests/test_security_owasp.py -q"
md_check  = "rumdl check ."
jx_check  = "DEBUG=true PYTHONPATH=. uv run jx check app/catalog.py:catalog"
check     = "task lint && task typecheck && task test && task md_check && task jx_check"

# --- CI: format everything then run all checks ---
ci        = "task fmt && task check"
precommit = "pre-commit run --all-files"

# --- docker ---
docker_dev_up    = "docker compose --env-file .env -f docker/docker-compose.yml up --build -d"
docker_dev_down  = "docker compose --env-file .env -f docker/docker-compose.yml down"
docker_prod_up   = "docker compose --env-file .env -f docker/docker-compose.prod.yml up --build -d"
docker_prod_down = "docker compose --env-file .env -f docker/docker-compose.prod.yml down"
