[project]
name = "admin"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.128.0",
    "jinja2>=3.1.6",
    "jx>=0.5.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.32",
    "uvicorn[standard]>=0.40.0",
]
